# utilrs

./: .gitignore  Cargo.toml  tabledef.yaml  test.db
src/: fileprocessor.rs  filesplit.rs  forwardstar.rs  lib.rs  persistence.rs  xmlparser.rs
